flickering fix, (buffering)

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -578,7 +578,7 @@ a.editorButton {
   z-index: 1;
 }
 
-#dynamicCanvas {
+#dynamicCanvas, #bufferCanvas {
  position: absolute;
  z-index: 2;
 }
